# EHRzipper

./: .env.example  .gitignore  DEMO.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml  secrets.toml.example
abstraction/: REPORT.md  __init__.py  __main__.py  abstractor.py  batch.py  eval.py  pipeline.py  types.py
abstraction/eval_set/: ground_truth.py
abstraction/output/: eval_report.json  results.jsonl
derived/: __init__.py  __main__.py  dates.py  drugs.py  km.py  lot.py  lot_validator.py  pipeline.py  rwos.py
ehrzipper/: __init__.py  coded.py  coercions.py  engine.py  haiku_router.py  normalizer.py  sf_connect.py  storage.py  storage_snowflake.py  storage_sqlite.py  types.py  ucum.py
ehrzipper/lookup/: __init__.py  matcher.py  registries.py  types.py
ehrzipper/migrations/: 001_zippering_tables.sql
ingest/: __init__.py  runner.py  types.py
ingest/adapters/: __init__.py  common.py  csv_file.py  fhir.py  hl7.py
methodology/: canonical-schema-seed.csv  canonical-schema.md  cohort-definition.md  derived-variables.md
pipeline/: __init__.py  data_quality.py  load_snowflake.py  run_engine.py
snowflake/: ARCHITECTURE.md  README.md  migrate.py
snowflake/ddl/: 00_database.sql  01_raw.sql  02_staging.sql  03_meta.sql  04_core.sql  05_marts.sql
synthetic/: README.md  __init__.py  csv_writer.py  fhir_writer.py  generator.py  hl7_writer.py  notes.py  profiles.py  vocab.py
synthetic/output/: manifest.json
tests/: conftest.py  test_abstraction.py  test_coercions.py  test_data_quality.py  test_derived.py  test_engine.py  test_engine_lookup.py  test_haiku_router.py  test_healthcare_types.py  test_ingest.py  test_lookup.py  test_storage_snowflake.py  test_storage_snowflake_unit.py  test_storage_sqlite.py  test_synthetic.py  test_types.py  test_ui.py
ui/: app.py
ui/components/: theme.py
ui/data/: zippering_decisions_live.csv
ui/extra_pages/: data_dictionary.py  patient_explorer.py
ui/integrations/: __init__.py  _store.py  base.py  config.py  dropbox_connector.py  gdrive.py
ui/pages/: 1_cohort_builder.py  2_survival_analysis.py  3_audit_trail.py  4_import_data.py
viz/: zipper_flow.html
(+248 files in other folders)
